study/devops-c9/assignment-without-helm/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                      - database
              topologyKey: "kubernetes.io/minikube"
      containers:
      - name: backend
        image: ariwesi/timeshee_backend:v1
        ports:
        - containerPort: 8082
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - |
              curl -X POST \
                -H "Content-Type: application/json" \
                -d '{"project": "test#", "task": "test", "dateFrom": "", "dateTo": "", "status": "approved", "assignTo": "user1"}' \
                http://localhost:4200/api/timesheets
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 3
      tolerations:
      - key: "app"
        operator: "Equal"
        value: "frontendandbackend"
        effect: "NoSchedule"
